# jupyter-panel-proxy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  dodo.py  pixi.toml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yaml  python_package.yml  test.yaml
conda.recipe/: meta.yaml
panel_server/: __init__.py  __version.py
panel_server/tests/: test_basic.py
scripts/conda/: build.sh
scripts/conda/recipe/: meta.yaml
